--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -5,26 +5,22 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Serve React SPA — all non-API routes return index.html
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy /api/* to backend, stripping the /api prefix
-    # /api/audit  -> ${BACKEND_URL}/audit
-    # /api/health -> ${BACKEND_URL}/health
     location /api/ {
         rewrite ^/api/(.*) /$1 break;
 
         proxy_pass ${BACKEND_URL};
         proxy_http_version 1.1;
 
-        proxy_set_header Host $host;
+        proxy_set_header Host brandguardian-backend.yellowpebble-cbc9a2e6.eastus.azurecontainerapps.io;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_ssl_server_name on;
 
-        # Long timeout for /audit endpoint (2-5 minutes)
         proxy_connect_timeout 60s;
         proxy_send_timeout 600s;
         proxy_read_timeout 600s;
